Added iOS UsageDescriptions

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -45,5 +45,9 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<true/>
+        <key>NSCameraUsageDescription</key>
+        <string>We would like to access your camera in order to be able to scan QR Codes or take pictures for your personal records.</string>
+        <key>NSPhotoLibraryUsageDescription</key>
+        <string>We would like to access your photo library in order to be able to add data to your personal records.</string>
 	</dict>
 </plist>
