--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -48,10 +48,10 @@
 		<key>UIApplicationSupportsIndirectInputEvents</key>
 		<true/>
 		<key>UIStatusBarHidden</key>
-		<true/>
-        <key>NSCameraUsageDescription</key>
-        <string>We would like to access your camera in order to be able to scan QR Codes or take pictures for your personal records.</string>
-        <key>NSPhotoLibraryUsageDescription</key>
-        <string>We would like to access your photo library in order to be able to add data to your personal records.</string>
+		<false/>
+		<key>NSCameraUsageDescription</key>
+		<string>We would like to access your camera in order to be able to scan QR Codes or take pictures for your personal records.</string>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>We would like to access your photo library in order to be able to add data to your personal records.</string>
 	</dict>
 </plist>
