--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,11 @@ dependencies:
 
   web_socket_channel: ^2.2.0
 
+  cross_file: ^0.3.3+2
+  image_picker: ^0.8.6
+  file_picker: ^5.0.1
+  file_saver: ^0.1.1
+
   # SVG Support
   flutter_svg: ^1.1.4
   flutter_svg_provider: ^1.0.3
@@ -93,9 +98,6 @@ dependencies:
       path: charts_flutter
       ref: fix_flutter3.0
   gauges: ^1.0.0
-  image_picker: ^0.8.6
-  file_picker: ^5.0.1
-  file_saver: ^0.1.1
   flutter_keyboard_visibility: ^5.4.0
 
 dev_dependencies:
