Added flutter_web_plugins to remove referenced dependency warning

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  flutter_web_plugins:
+    sdk: flutter
+
   flutter_native_splash: ^2.2.16
 
   # iOS Dep
