--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
 
   # Translations capability
   intl: ^0.17.0
+  timezone: ^0.9.0
+  flutter_native_timezone: ^2.0.0
 
   material_color_generator: ^1.1.0
 
