--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   universal_io: ^2.0.4
 
   web_socket_channel: ^2.2.0
+  connectivity_plus: ^3.0.2
 
   cross_file: ^0.3.3+2
   image_picker: ^0.8.6
