--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -105,6 +105,7 @@ dependencies:
   gauges: ^1.0.0
   flutter_keyboard_visibility: ^5.4.0
   flutter_slidable: ^2.0.0
+  action_slider: ^0.6.1
 
 dependency_overrides:
   # https://github.com/dint-dev/universal_io/pull/37
