Upgraded flutter_svg and removed flutter_svg_provider

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,8 +60,7 @@ dependencies:
   file_saver: ^0.1.1
 
   # SVG Support
-  flutter_svg: ^1.1.4
-  flutter_svg_provider: ^1.0.3
+  flutter_svg: ^2.0.0+1
   # Icons
   font_awesome_flutter: ^10.2.1
   # Managing different persistent classes
