--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,7 @@ dependencies:
   signature:
     git:
       url: https://github.com/sibvisions/fix_signature.git
+      ref: "flutter_3.3"
   # Saving files on system
   path: ^1.8.1
   path_provider: ^2.0.11
