--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -109,6 +109,7 @@ dependencies:
   action_slider: ^0.6.1
   webview_flutter: ^4.0.2
   card_loading: ^0.3.0
+  flutter_treeview: ^1.0.7+1
 
 dev_dependencies:
   flutter_lints: ^2.0.1
