--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -108,6 +108,7 @@ dependencies:
   flutter_slidable: ^2.0.0
   action_slider: ^0.6.1
   webview_flutter: ^4.0.2
+  card_loading: ^0.3.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
