Fixed default config persistence

--- a/assets/config/app.conf.json
+++ b/assets/config/app.conf.json
@@ -5,6 +5,7 @@
   "aliveInterval": 30000,
   "wsPingInterval": 10000,
   "autoRestartOnSessionExpired": true,
+  "showAppOverviewWithoutDefault": false,
   "configsLocked": false,
   "configsHidden": false,
   "uiConfig": {
