--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   # Device Identification
   package_info_plus: ^3.0.1
   device_info_plus: ^8.0.0
-  uuid: ^3.0.6
+  android_id: ^0.1.3+1
 
   # Util
   logger: ^1.1.0
