--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,6 +94,7 @@ dependencies:
   linked_scroll_controller: ^0.2.0
   liquid_progress_indicator: ^0.4.0
   photo_view: ^0.14.0
+  avatars: ^3.0.2
 
   #  charts_flutter: ^0.12.0
   charts_flutter:
