new config parameters

--- a/assets/config/app.conf.json
+++ b/assets/config/app.conf.json
@@ -6,8 +6,9 @@
   "wsPingInterval": 10000,
   "autoRestartOnSessionExpired": true,
   "showAppOverviewWithoutDefault": false,
-  "configsLocked": false,
-  "configsHidden": false,
+  "customAppsAllowed": false,
+  "serverConfigsLocked": true,
+  "serverConfigsParametersHidden": true,
   "uiConfig": {
     "showRememberMe": true,
     "rememberMeChecked": true
@@ -18,7 +19,9 @@
       "appName": "demo",
       "username": "features",
       "password": "features",
-      "icon": "https://upload.wikimedia.org/wikipedia/commons/a/a6/Jvx_2020.png"
+      "icon": "https://upload.wikimedia.org/wikipedia/commons/a/a6/Jvx_2020.png",
+      "parametersHidden" : false,
+      "locked": false
     }
   ],
   "versionConfig": {
