--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,6 +110,7 @@ dependencies:
   card_loading: ^0.3.0
   flutter_treeview: ^1.0.7+1
   modal_bottom_sheet: ^3.0.0-pre
+  qr_flutter: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
