#112 Increase screen brightness on QR-Code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -111,6 +111,7 @@ dependencies:
   flutter_treeview: ^1.0.7+1
   modal_bottom_sheet: ^3.0.0-pre
   qr_flutter: ^4.0.0
+  screen_brightness: ^0.2.2
 
 dev_dependencies:
   flutter_lints: ^2.0.1
